# contdid

./: .gitignore  .readthedocs.yaml  README.md  conftest.py  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt  user-guide.rst
reproduction/medicare_pps/: manifest.json  source_options.json
reproduction/simulate_contdid/: manifest.json
runtime-assets/: cck_boundary_contract.json  data_shape_boundary_contract.json  method_reference_contract.json  numerical_truth_contract_v1.json  public_api_contract_v1.json  symbol_map_contract.json
scripts/: run_package_phase_verification.py
src/: phase10_frontier_expectations.py
src/contdid/: __init__.py  _asset_paths.py  _phase10_frontier_root_logic.py  adapters.py  api.py  base_estimator.py  bspline.py  cck.py  data.py  empirical.py  estimation.py  estimation.pyi  eventstudy.py  hooks.py  inference.py  influence.py  lepski.py  multiperiod.py  pipeline.py  plotting.py  plotting.pyi  pretest.py  registry.py  results.py  simulate.py  specs.py  summary.py  summary.pyi  timing.py  validation.py
tests/: test_adapters.py  test_anticipation.py  test_anticipation_cck_eventstudy.py  test_architecture_integration.py  test_base_estimator.py  test_bspline.py  test_clustered_se.py  test_control_groups.py  test_covariates.py  test_covariates_notyettreated.py  test_cross_validation.py  test_dgp_extended.py  test_extensibility_integration.py  test_hooks.py  test_influence.py  test_integration_export_plotting.py  test_lepski.py  test_multiperiod.py  test_multiperiod_staggered.py  test_multiperiod_theory_alignment.py  test_notyettreated_dose.py  test_numerical_consistency.py  test_numerical_stability.py  test_package_layout.py  test_phase10_frontier_runtime_helper.py  test_phase10_package_phase_verification.py  test_phase2_contract_bundle.py  test_phase2_source_contracts.py  test_phase3_objects.py  test_phase3_simulate_data.py  test_phase3_simulation_contracts.py  test_phase3_validation_contracts.py  test_phase4_level_estimator.py  test_phase4_oracle_contracts.py  test_phase4_parity.py  test_phase4_parity_fixture.py  test_phase4_slope_estimator.py  test_phase5_eventstudy.py  test_phase5_eventstudy_parity.py  test_phase5_timing_groups.py  (+19 more)
tests/benchmarks/: BENCHMARK_RESULTS.md  __init__.py  bench_performance.py  bench_sparse.py
tests/fixtures/: phase4_parity_expected.json  phase5_eventstudy_expected.json  phase6_inference_expected.json  phase8_monte_carlo_expected.json
tests/r_reference/: README.md  dgp_params.json  generate_fixtures.R
