[build-system]
requires = []
build-backend = "contdid_build_backend"
backend-path = ["build_backend"]

[project]
name = "contdid"
version = "0.1.0"
description = "Continuous-dose Difference-in-Differences reporting tools for Python."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Xuanyu Cai", email = "xuanyuCAI@outlook.com"},
    {name = "Wenli Xu", email = "wlxu@cityu.edu.mo"},
]
keywords = [
  "causal-inference",
  "continuous-treatment",
  "difference-in-differences",
  "event-study",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=2.1",
  "pandas>=2.2",
  "pillow>=10",
  "scipy>=1.12",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.6"]
progress = ["tqdm>=4.60"]
polars = ["polars>=0.20"]
arrow = ["pyarrow>=12.0"]
all-backends = ["polars>=0.20", "pyarrow>=12.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.0"]

[project.urls]
Repository = "https://github.com/gorgeousfish/contdid"
"Method paper" = "https://arxiv.org/abs/2107.02637"
"Reference R package" = "https://github.com/bcallaway11/contdid"
"Reference documentation" = "https://bcallaway11.github.io/contdid/"

[tool.contdid-build]
packages = ["src/contdid"]

[tool.contdid-build.force-include]
"src/contdid/py.typed" = "contdid/py.typed"
"runtime-assets/method_reference_contract.json" = "contdid/runtime_assets/method_reference_contract.json"
"runtime-assets/numerical_truth_contract_v1.json" = "contdid/runtime_assets/numerical_truth_contract_v1.json"
"runtime-assets/symbol_map_contract.json" = "contdid/runtime_assets/symbol_map_contract.json"
"runtime-assets/public_api_contract_v1.json" = "contdid/runtime_assets/public_api_contract_v1.json"
"runtime-assets/cck_boundary_contract.json" = "contdid/runtime_assets/cck_boundary_contract.json"
"runtime-assets/data_shape_boundary_contract.json" = "contdid/runtime_assets/data_shape_boundary_contract.json"
"reproduction/medicare_pps/manifest.json" = "contdid/reproduction/medicare_pps/manifest.json"
"reproduction/medicare_pps/source_options.json" = "contdid/reproduction/medicare_pps/source_options.json"
"reproduction/simulate_contdid/manifest.json" = "contdid/reproduction/simulate_contdid/manifest.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=contdid --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["contdid"]
omit = ["*/tests/*", "*/benchmarks/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
