[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contdid"
version = "0.1.0"
description = "Continuous Treatment Difference-in-Differences for Python"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Xuanyu Cai" },
  { name = "Wenli Xu" },
]
maintainers = [
  { name = "Xuanyu Cai" },
  { name = "Wenli Xu" },
]
keywords = [
  "causal-inference",
  "continuous-treatment",
  "difference-in-differences",
  "event-study",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=2.1",
  "pandas>=2.2",
  "scipy>=1.8",
  "pillow>=10",
]

[project.urls]
Repository = "https://github.com/gorgeousfish/contdid"
Documentation = "https://contdid.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/contdid"]

[tool.pytest.ini_options]
pythonpath = ["src"]
